--- a/wp-content/themes/storefront/assets/sass/base/_base.scss
+++ b/wp-content/themes/storefront/assets/sass/base/_base.scss
@@ -278,6 +278,11 @@ body {
 	overflow-x: hidden;
 }
 
+.site-content,
+.header-widget-region {
+	-webkit-tap-highlight-color: rgba(0,0,0,0);
+}
+
 /**
  * Header
  */
@@ -339,7 +344,7 @@ body {
 }
 
 .site-branding {
-	h1 {
+	.site-title {
 		font-size: 2em;
 		letter-spacing: -1px;
 		margin: 0;
@@ -517,7 +522,8 @@ table {
 		}
 	}
 
-	.content-area {
+	&.right-sidebar .content-area,
+	&.left-sidebar .content-area {
 		width: 100%;
 	}
 
